# data_sdk_v2

./: .autorc  AUTHORS.rst  CHANGELOG.md  Makefile  README.rst
.github/workflows/: pull_request.yml  push.yml
src/normalize/: .bumpversion.cfg  pyproject.toml
src/normalize/normalize/: __init__.py  cli.py
src/normalize/tests/: test_normalize.py
src/transform/: .bumpversion.cfg  pyproject.toml
src/transform/tests/: test_transform.py
src/transform/transform/: cli.py
