[tool.poetry]
name = "transform"
version = "1.0.0"
description = ""
authors = ["Chintanpatel90 <chintan.patel@techholding.co>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
